# Diary

./: app.json  package-lock.json  package.json
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/diaryappnew/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml  requirements.txt  setup.py
backend/app/: requirements.txt
backend/app/services/: diary_enhancement.py
backend/diary_backend/: __init__.py  pyproject.toml
backend/diary_backend/app/: database.py  main.py
ios/: Podfile
ios/DiaryAppNew/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/DiaryAppNew.xcodeproj/: project.pbxproj
ios/DiaryAppNew.xcodeproj/xcshareddata/xcschemes/: DiaryAppNew.xcscheme
ios/DiaryAppNewTests/: DiaryAppNewTests.m
src/: App.tsx
src/screens/: DiaryEntryScreen.tsx  HomeScreen.tsx  VoiceDiaryScreen.tsx
src/services/: DiaryService.ts  UserService.ts  VoiceService.ts
src/services/__tests__/: UserService.test.ts  VoiceService.test.ts
src/types/: index.ts
src/utils/: env.ts
