[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "diary_backend"
version = "0.1.0"
description = "Backend for the Diary application with AI enhancement features"
authors = ["Devin <devin@example.com>"]
packages = [{include = "diary_backend"}]

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "0.104.1"
uvicorn = "0.24.0"
anthropic = "0.7.8"
python-dotenv = "1.0.0"
pydantic = "2.5.2"
sqlalchemy = "2.0.23"
aiosqlite = "0.19.0"
python-multipart = "0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
black = ">=22.0"
isort = ">=5.0"
