[project]
name = "diary_backend"
version = "0.1.0"
description = "Backend for the Diary application"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "anthropic==0.7.7",
    "openai==1.3.7",
    "sqlalchemy==2.0.23",
    "aiosqlite==0.19.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
