[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diary_backend"
version = "0.1.0"
description = "Backend for the Diary application with AI enhancement features"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "anthropic==0.7.8",
    "python-dotenv==1.0.0",
    "pydantic==2.5.2",
    "sqlalchemy==2.0.23",
    "aiosqlite==0.19.0",
    "python-multipart==0.0.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
